--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [workspace]
-members = ["ui", "syncplay", "rqstream"]
+members = ["ui", "syncplay", "rqstream", "nyaa"]
 resolver = "3"
 
 [workspace.dependencies]
 tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
 md5 = "0.8.0"
 serde = { version = "1.0.225", features = ["derive"] }
+reqwest = { version = "0.12.23", default-features = false, features = [
+    "rustls-tls",
+] }
+chrono = "0.4.42"
+size = "0.5.0"
