--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anilist_moe = { git = "https://github.com/Random-Scientist/anilist_moe", rev = "13aa4c61b6c9426f8eba5d2d21cf8763d68d55b0" }
 anitomy = { git = "https://github.com/Random-Scientist/anitomy-rs", rev = "c5271be1d9fe71a49e93e98ac3f982b38e6e27b6" }
+mpv-ipc = { git = "https://github.com/Random-Scientist/mpv-ipc-rs", rev = "873b1295231efe9c33d47efbd307a9adaad83620" }
 
 iced = { version = "0.13.1", features = ["tokio", "image"] }
 sled = "0.34.7"
@@ -14,7 +15,11 @@ serde.workspace = true
 tokio.workspace = true
 reqwest.workspace = true
 chrono.workspace = true
+size.workspace = true
+
 nyaa.workspace = true
+rqstream.workspace = true
+
 bincode = { version = "2.0.1", features = ["derive", "serde"] }
 log = "0.4.28"
 toml = "0.9.7"
@@ -26,3 +31,4 @@ derive_more = { version = "2.0.1", features = ["from", "into"] }
 
 rand = "0.9.2"
 itertools = "0.14.0"
+serde_json = "1.0.145"
