--- a/rqstream/Cargo.toml
+++ b/rqstream/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 tokio.workspace = true
+eyre.workspace = true
+
 anyhow = "1.0.100"
 axum = "0.8.4"
 http = "1.3.1"
