--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -16,6 +16,7 @@ tokio.workspace = true
 reqwest.workspace = true
 chrono.workspace = true
 size.workspace = true
+eyre.workspace = true
 
 nyaa.workspace = true
 rqstream.workspace = true
@@ -23,7 +24,7 @@ rqstream.workspace = true
 bincode = { version = "2.0.1", features = ["derive", "serde"] }
 log = "0.4.28"
 toml = "0.9.7"
-eyre = "0.6.12"
+
 simple_logger = "5.0.0"
 
 directories = "6.0.0"
