--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ reqwest = { version = "0.12.23", default-features = false, features = [
 ] }
 chrono = "0.4.42"
 size = "0.5.0"
+log = "0.4.28"
 
 nyaa = { path = "nyaa" }
 rqstream = { path = "rqstream" }
