--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -20,6 +20,7 @@ eyre.workspace = true
 log.workspace = true
 nyaa.workspace = true
 rqstream.workspace = true
+strum.workspace = true
 
 bincode = { version = "2.0.1", features = ["derive", "serde"] }
 
@@ -33,3 +34,5 @@ derive_more = { version = "2.0.1", features = ["from", "into"] }
 rand = "0.9.2"
 itertools = "0.14.0"
 serde_json = "1.0.145"
+enum_delegate = "0.2.0"
+tokio-stream = "0.1.17"
