--- a/rqstream/Cargo.toml
+++ b/rqstream/Cargo.toml
@@ -6,13 +6,11 @@ edition = "2024"
 [dependencies]
 tokio.workspace = true
 eyre.workspace = true
+librqbit.workspace = true
 
 anyhow = "1.0.100"
 axum = "0.8.4"
 http = "1.3.1"
-librqbit = { version = "8.1.1", default-features = false, features = [
-    "rust-tls",
-] }
 slab = "0.4.11"
 mime_guess = "2.0.5"
 tokio-util = { version = "0.7.16", features = ["full"] }
