--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
-name = "ui"
+name = "monsoon"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 anilist_moe = { git = "https://github.com/Random-Scientist/anilist_moe", rev = "13aa4c61b6c9426f8eba5d2d21cf8763d68d55b0" }
-anitomy = { git = "https://github.com/Random-Scientist/anitomy-rs", rev = "c5271be1d9fe71a49e93e98ac3f982b38e6e27b6" }
+anitomy = { git = "https://github.com/Random-Scientist/anitomy-rs", rev = "deaed8f05e4808dfb599d25c0887e6d4b1cbbf70" }
 mpv-ipc = { git = "https://github.com/Random-Scientist/mpv-ipc-rs", rev = "d14a9d4bae50d000594a9747fffc295195b7dd69" }
 
 iced = { version = "0.13.1", features = ["tokio", "image"] }
+iced_core = "0.13.1"
+iced_widget = "0.13.1"
+
 sled = "0.34.7"
 
 serde.workspace = true
@@ -21,6 +24,7 @@ log.workspace = true
 nyaa.workspace = true
 rqstream.workspace = true
 strum.workspace = true
+librqbit.workspace = true
 
 bincode = { version = "2.0.1", features = ["derive", "serde"] }
 
@@ -36,3 +40,9 @@ itertools = "0.14.0"
 serde_json = "1.0.145"
 enum_delegate = "0.2.0"
 tokio-stream = "0.1.17"
+crossbeam-utils = "0.8.21"
+discord-rich-presence = { version = "1.0.0", optional = true }
+
+[features]
+default = ["discord"]
+discord = ["dep:discord-rich-presence"]
