--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -4,45 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anilist_moe = { git = "https://github.com/Random-Scientist/anilist_moe", rev = "13aa4c61b6c9426f8eba5d2d21cf8763d68d55b0" }
-anitomy = { git = "https://github.com/Random-Scientist/anitomy-rs", rev = "deaed8f05e4808dfb599d25c0887e6d4b1cbbf70" }
-mpv-ipc = { git = "https://github.com/Random-Scientist/mpv-ipc-rs", rev = "d14a9d4bae50d000594a9747fffc295195b7dd69" }
-
-iced = { version = "0.13.1", features = ["tokio", "image"] }
-iced_core = "0.13.1"
-iced_widget = "0.13.1"
-
-sled = "0.34.7"
-
-serde.workspace = true
-tokio.workspace = true
-reqwest.workspace = true
-chrono.workspace = true
-size.workspace = true
-eyre.workspace = true
-log.workspace = true
-nyaa.workspace = true
-rqstream.workspace = true
-strum.workspace = true
-librqbit.workspace = true
-
-bincode = { version = "2.0.1", features = ["derive", "serde"] }
-
-toml = "0.9.7"
-
-simple_logger = "5.0.0"
-
-directories = "6.0.0"
-derive_more = { version = "2.0.1", features = ["from", "into"] }
-
-rand = "0.9.2"
+app.workspace = true
+helpers.workspace = true
+iced = { git = "https://github.com/iced-rs/iced", rev = "8bfd099c5929d927a3fdde666d4c645d0bd83cb7", features = [
+    "tokio",
+    "image",
+] }
 itertools = "0.14.0"
-serde_json = "1.0.145"
-enum_delegate = "0.2.0"
-tokio-stream = "0.1.17"
 crossbeam-utils = "0.8.21"
-discord-rich-presence = { version = "1.0.0", optional = true }
-
-[features]
-default = ["discord"]
-discord = ["dep:discord-rich-presence"]
