--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0.225", features = ["derive"] }
 serde_json = "1.0.145"
 reqwest = { version = "0.12.23", default-features = false, features = [
     "rustls-tls",
+    "json",
 ] }
 librqbit = { version = "8.1.1", default-features = false, features = [
     "rust-tls",
