start on info popup and widget

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,8 @@ size = "0.5.0"
 log = "0.4.28"
 strum = { version = "0.27.2", features = ["derive"] }
 eyre = { version = "0.6.12" }
+
+iced = { version = "0.14.0", features = ["tokio", "image"] }
+iced_core = { version = "0.14" }
+iced_widget = { version = "0.14" }
+iced_runtime = { version = "0.14.0" }
