--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -6,9 +6,7 @@ edition = "2024"
 [dependencies]
 app.workspace = true
 helpers.workspace = true
-iced = { git = "https://github.com/iced-rs/iced", rev = "8bfd099c5929d927a3fdde666d4c645d0bd83cb7", features = [
-    "tokio",
-    "image",
-] }
+iced.workspace = true
+
 itertools = "0.14.0"
 crossbeam-utils = "0.8.21"
