--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,7 @@ iced = { version = "0.14.0", features = ["tokio", "image"] }
 iced_core = { version = "0.14" }
 iced_widget = { version = "0.14" }
 iced_runtime = { version = "0.14.0" }
+
+[profile."hot"]
+opt-level = "z"
+inherits = "dev"
